--- a/quarto_reports/.gitignore
+++ b/quarto_reports/.gitignore
@@ -3,3 +3,5 @@ report_influenzatiters_files
 report_influenzatiters.html
 report_hai_vs_microneut_files
 report_hai_vs_microneut.html
+report_hai_vs_microneut.tex
+report_hai_vs_microneut.pdf
